--- a/templates/applications/api.yaml
+++ b/templates/applications/api.yaml
@@ -1,31 +1,38 @@
-{{- if .Values.apiSystem.enabled }}
 apiVersion: apps/v1
-kind: StatefulSet
+kind: {{ .Values.api.kind }}
 metadata:
-  name: api-system
+  name: api
   namespace: {{ include "docspace.namespace" . | quote }}
   labels:
-    app: api-system
+    app: api
     {{- if .Values.commonLabels }}
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
-  replicas: {{ .Values.apiSystem.replicaCount }}
+  replicas: {{ .Values.api.replicaCount }}
   selector:
     matchLabels:
-      app: api-system
+      app: api
       {{- if .Values.commonLabels }}
       {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
-  serviceName: api-system
-  {{- if .Values.apiSystem.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.apiSystem.updateStrategy | nindent 4 }}
+  {{- if eq .Values.files.kind "StatefulSet" }}
+  serviceName: api
   {{- end }}
-  podManagementPolicy: OrderedReady
+  {{- if .Values.api.updateStrategy }}
+  {{- if eq .Values.api.kind "Deployment" }}
+  strategy: {{- include "docspace.update.strategyType" .Values.api.updateStrategy }}
+  {{- else }}
+  updateStrategy: {{- include "docspace.update.strategyType" .Values.api.updateStrategy }}
+  {{- end }}
+  {{- end }}
+  {{- if eq .Values.api.kind "StatefulSet" }}
+  podManagementPolicy: {{ .Values.api.podManagementPolicy }}
+  {{- end }}
   template:
     metadata:
       labels:
-        app: api-system
+        app: api
         {{- if .Values.commonLabels }}
         {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
@@ -40,13 +47,13 @@ spec:
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
-      {{- if or .Values.apiSystem.podAffinity .Values.apiSystem.nodeAffinity }}
+      {{- if or .Values.api.podAffinity .Values.api.nodeAffinity }}
       affinity:
-        {{- with .Values.apiSystem.podAffinity }}
+        {{- with .Values.api.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- with .Values.apiSystem.nodeAffinity }}
+        {{- with .Values.api.nodeAffinity }}
         nodeAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
@@ -73,28 +80,28 @@ spec:
       {{- toYaml . | nindent 6 }}
       {{- end }}
       containers:
-      - name: api-system
-        image: {{ .Values.apiSystem.image.repository }}:{{ default .Values.images.tag .Values.apiSystem.image.tag }}
-        imagePullPolicy: {{ .Values.apiSystem.image.pullPolicy }}
+      - name: api
+        image: {{ .Values.api.image.repository }}:{{ default .Values.images.tag .Values.api.image.tag }}
+        imagePullPolicy: {{ .Values.api.image.pullPolicy }}
         {{- if .Values.containerSecurityContext.enabled }}
         securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 10 }}
         {{- end }}
         ports:
-        - containerPort: {{ .Values.apiSystem.containerPorts.app }}
+        - containerPort: {{ .Values.api.containerPorts.app }}
           name: app
-        {{- if .Values.apiSystem.startupProbe.enabled }}
-        startupProbe: {{- omit .Values.apiSystem.startupProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.api.startupProbe.enabled }}
+        startupProbe: {{- omit .Values.api.startupProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.apiSystem.readinessProbe.enabled }}
-        readinessProbe: {{- omit .Values.apiSystem.readinessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.api.readinessProbe.enabled }}
+        readinessProbe: {{- omit .Values.api.readinessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        {{- if .Values.apiSystem.livenessProbe.enabled }}
-        livenessProbe: {{- omit .Values.apiSystem.livenessProbe "enabled" | toYaml | nindent 10 }}
+        {{- if .Values.api.livenessProbe.enabled }}
+        livenessProbe: {{- omit .Values.api.livenessProbe "enabled" | toYaml | nindent 10 }}
         {{- end }}
-        resources: {{- toYaml .Values.apiSystem.resources | nindent 10 }}
+        resources: {{- toYaml .Values.api.resources | nindent 10 }}
         env:
         - name: MYSQL_USER
-          value: {{ default .Values.connections.mysqlUser .Values.apiSystem.mysqlUser }}
+          value: {{ default .Values.connections.mysqlUser .Values.api.mysqlUser }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -161,4 +168,3 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
-{{- end }}
