Add the ability to set up kind for backup

--- a/values.yaml
+++ b/values.yaml
@@ -1220,13 +1220,28 @@ api:
 # This block defines the parameters common to all the Pods of this application
 #
 backup:
+  # backup.enabled Enables Backup installation
+  enabled: true
+  # backup.kind The controller used for deploy
+  # Possible values are `Deployment` (default) or `StatefulSet`
+  kind: Deployment
   # backup.replicaCount Number of Backup replicas to deploy
   replicaCount: 1
   # Update strategy used to replace old Pods by new ones
   updateStrategy:
-    # backup.updateStrategy.type Backup StatefulSet update strategy type
-    # Allowed values: `RollingUpdate` or `OnDelete`
+    # backup.updateStrategy.type Backup update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete` if `backup.kind` is set to `StatefulSet` and `RollingUpdate` or `Recreate` if `backup.kind` is set to `Deployment`
     type: RollingUpdate
+    # backup.updateStrategy.rollingUpdate Used only when `backup.updateStrategy.type=RollingUpdate`
+    rollingUpdate:
+      # backup.updateStrategy.rollingUpdate.maxUnavailable Maximum number of Backup Pods unavailable during the update process
+      maxUnavailable: 25%
+      # backup.updateStrategy.rollingUpdate.maxSurge Maximum number of Backup Pods created over the desired number of Pods
+      maxSurge: 25%
+  # backup.podManagementPolicy The Backup Pods scaling operations policy
+  # Used if `backup.kind` is set to `StatefulSet`
+  # ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-management-policies
+  podManagementPolicy: OrderedReady
   # Pod affinity rules for Backup Pod scheduling by nodes relative to other Pods
   # Pod affinity allow you to constrain which nodes Backup Pods can be scheduled on based on the labels of Pods already running on that node
   # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
