--- a/templates/applications/api.yaml
+++ b/templates/applications/api.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.api.enabled }}
 apiVersion: apps/v1
 kind: {{ .Values.api.kind }}
 metadata:
@@ -168,3 +169,4 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+{{- end }}
