--- a/templates/applications/backup-background-tasks.yaml
+++ b/templates/applications/backup-background-tasks.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.backupBackgroundTasks.enabled }}
 apiVersion: apps/v1
 kind: {{ .Values.backupBackgroundTasks.kind }}
 metadata:
@@ -168,3 +169,4 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+{{- end }}
