--- a/templates/applications/files.yaml
+++ b/templates/applications/files.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.files.enabled }}
 apiVersion: apps/v1
 kind: {{ .Values.files.kind }}
 metadata:
@@ -186,3 +187,4 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: {{ template "docspace.pvc.people.name" . }}
+{{- end }}
